# umbra-py

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
examples/: maps.md
src/umbra_py/: __init__.py  _lazy_imagery.py  _spinner.py  catalog.py  cli.py  constants.py  models.py  viz.py
tests/: test_catalog.py  test_lazy_imagery.py  test_live.py  test_models.py  test_viz.py
