[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umbra-py"
version = "0.1.0"
description = "A Python-first toolkit to make Umbra SAR open data easy to discover, load, download, and analyze."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "umbra-py contributors" }]
keywords = [
    "sar",
    "synthetic-aperture-radar",
    "umbra",
    "remote-sensing",
    "earth-observation",
    "stac",
    "geospatial",
    "gis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "requests>=2.28",
    "click>=8.1",
]

[project.optional-dependencies]
convert = ["sarpy>=1.3", "rasterio>=1.3", "numpy>=1.23"]
viz = ["folium>=0.14", "matplotlib>=3.6", "rasterio>=1.3", "numpy>=1.23"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.23",
    "ruff>=0.4",
]
all = ["umbra-py[convert,viz]"]

[project.urls]
Homepage = "https://github.com/theminiverse/umbra-py"
Repository = "https://github.com/theminiverse/umbra-py"
Issues = "https://github.com/theminiverse/umbra-py/issues"
"Umbra Open Data" = "https://umbra.space/open-data/"

[project.scripts]
umbra = "umbra_py.cli:main"
umbra-py = "umbra_py.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/umbra_py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require live network access to Umbra's public catalog",
]
addopts = "-m 'not network'"
